--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
     </section>
 
     <section id="about">
-        <h2>About the Game</h2>
-        <p>Selamat datang di Tebak-Tebakan Seru! Uji pengetahuanmu dalam berbagai kategori.</p>
+        <p style="color: cyan;"> About the Game</p>
+        <p style="color: cyan;">Selamat datang di Tebak-Tebakan Seru! Uji pengetahuanmu dalam berbagai kategori.</p>
     </section>
 
     <section id="contact">
