--- a/index.html
+++ b/index.html
@@ -107,14 +107,14 @@
 </head>
 <body>
     <header>
-        <h1>Tebak-Tebakan Seru</h1>
+        <p style="color: gray;">Tebak-Tebakan Seru</h1>
         <nav>
-            <a href="#Tebak-Tebakan seru">Tebak-Tebakan seru</a>
+            <a href="#Tebak-Teba">pakai mode deskop untuk mobile</a>
         </nav>
     </header>
     
     <section id="play">
-        <h2>Pilih Kategori</h2>
+        <p style="color: white;"> Pilih Kategori</p>
         <div class="button-container">
             <button onclick="startGame('hewan')">Hewan</button>
             <button onclick="startGame('negara')">Negara</button>
